Changes on footer - All right reserved year

--- a/celebrate/pages/mc_profile.html
+++ b/celebrate/pages/mc_profile.html
@@ -190,7 +190,7 @@
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
-                <p class="lead pt-2">&copy; 2021 - <span id="year"></span> Celebrate, All Rights Reserved</p>
+                <p class="lead pt-2">&copy; <span id="year"></span> Celebrate, All Rights Reserved</p>
             </div>
         </div>
         <!-- Go-Top -->
