Some changes on fonts

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -27,7 +27,7 @@
             <img src="assets/img/brand/logo.png" alt="fastnet-logo">
         </a>
         <label for="check" id="check-btn">
-            <i class="fas fa-th"></i>
+            <i class="fas fa-th-large"></i>
         </label>
         <input type="checkbox" name="check" id="check">
         <ul class="navbar-nav">
@@ -60,7 +60,6 @@
                 </div>
                 <div class="hero-img">
                     <img src="assets/img/hero/hero.png" alt="services">
-                    <!-- <img src="assets/img/hero/wifi.png" alt="car-tracking-wifi" class="wifi"> -->
                 </div>
             </div>
         </div>
