paralax section has been added

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -35,16 +35,16 @@
                 <a href="#home" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
-                <a href="pages/about.html" class="nav-link">About</a>
+                <a href="#pages/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="pages/services.html" class="nav-link">Services</a>
+                <a href="#pages/services.html" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-                <a href="pages/projects.html" class="nav-link">Portfolio</a>
+                <a href="#pages/projects.html" class="nav-link">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a href="pages/contact.html" class="nav-link">Contact</a>
+                <a href="#pages/contact.html" class="nav-link">Contact</a>
             </li>
         </ul>
     </nav>
@@ -61,6 +61,16 @@
                 <div class="hero-img">
                     <img src="assets/img/hero/hero.png" alt="services">
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- === Paralax image section === -->
+    <section id="paralax">
+        <div class="container">
+            <div class="row">
+                <p class="display-2">Well structured, well organized
+                </p>
             </div>
         </div>
     </section>
