More sections have been added

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -41,7 +41,7 @@
                 <a href="#pages/services.html" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-                <a href="#pages/projects.html" class="nav-link">Portfolio</a>
+                <a href="#pages/projects.html" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
                 <a href="#pages/contact.html" class="nav-link">Contact</a>
@@ -71,6 +71,41 @@
             <div class="row">
                 <p class="display-2">Well structured, well organized
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- === Featured === -->
+    <section id="featured">
+        <div class="container">
+            <div class="row">
+                <div class="featured-img">
+                    <img src="assets/img/camera/camera5.png" alt="">
+                </div>
+                <div class="featured-text">
+                    <h1>Secure with us</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
+                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- === Featured-2 === -->
+    <section id="featured-2">
+        <div class="container">
+            <div class="row">
+                <div class="featured-2-text">
+                    <h1>Given control</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
+                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                    </p>
+                </div>
+                <div class="featured-2-img">
+                    <img src="assets/img/access-control/access-control1.png" alt="">
+                </div>
             </div>
         </div>
     </section>
