--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -83,7 +83,7 @@
                     <img src="assets/img/camera/camera5.png" alt="">
                 </div>
                 <div class="featured-text">
-                    <h1>Secure with us</h1>
+                    <h1>Watch man</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
                         dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
@@ -92,6 +92,7 @@
             </div>
         </div>
     </section>
+
     <!-- === Featured-2 === -->
     <section id="featured-2">
         <div class="container">
@@ -105,6 +106,24 @@
                 </div>
                 <div class="featured-2-img">
                     <img src="assets/img/access-control/access-control1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- === Featured-3 === -->
+    <section id="featured-3">
+        <div class="container">
+            <div class="row">
+                <div class="featured-3-img">
+                    <img src="assets/img/attendance/attendance3.png" alt="">
+                </div>
+                <div class="featured-3-text">
+                    <h1>Attend it</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
+                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                    </p>
                 </div>
             </div>
         </div>
