Social media added on navbar

--- a/mservices/index.html
+++ b/mservices/index.html
@@ -63,9 +63,7 @@
                     <div class="hero-text">
                         <h1 class="display-4">Meet Electrical Contractor</h1>
                         <p>
-                            Who embraces and maintains international standards in provision of electrical
-                            services while safeguarding highest standard of corporate social responsibility
-                            taking into account safety, health and environmental care.
+                            Who embraces and maintains international standards in provision of electrical services while safeguarding highest standard of corporate social responsibility taking into account safety, health and environmental care.
                         </p>
                         <a href="tel:+255 713 500 365" class="btn">Call Us Now</a>
                     </div>
@@ -102,9 +100,7 @@
                     <div class="electric-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Electrical Installation</h1>
                         <p>
-                            We do supply, install, test and commissioning of electrical systems for residential,
-                            industrial
-                            and commercial buildings.
+                            We do supply, install, test and commissioning of electrical systems for residential, industrial and commercial buildings.
                         </p>
                     </div>
                 </div>
@@ -138,8 +134,7 @@
                     <div class="renewable-text" data-aos="fade-left" data-aos-delay="100">
                         <h1 class="display-1">Solar Systems</h1>
                         <p>
-                            We do supply, install, testing and commissioning of renewable energy system
-                            (solar energy).
+                            We do supply, install, testing and commissioning of renewable energy system (solar energy).
                         </p>
                     </div>
                 </div>
@@ -168,9 +163,7 @@
                     <div class="sub-text" data-aos="fade-right" data-aos-delay="100">
                         <h1 class="display-1">Substations Construction</h1>
                         <p>
-                            Construction of substations including Installation, Test and Commissioning of transformer
-                            and related
-                            civil works.
+                            Construction of substations including Installation, Test and Commissioning of transformer and related civil works.
                         </p>
                     </div>
                     <div class="sub-img" data-aos="fade-up" data-aos-delay="100">
@@ -189,10 +182,7 @@
                         <i class="fas fa-quote-left"></i>
                         <img src="assets/img/user/user2.png" alt="user">
                         <p>
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas. Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
                             <h4>Francis Lubida</h4>
@@ -210,10 +200,7 @@
                         <i class="fas fa-quote-left"></i>
                         <img src="assets/img/user/user2.png" alt="user">
                         <p>
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas. Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
                             <h4>Prosper Mbuma</h4>
@@ -231,10 +218,7 @@
                         <i class="fas fa-quote-left"></i>
                         <img src="assets/img/user/user2.png" alt="user">
                         <p>
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
-                            Show respect and value all individuals for their diverse backgrounds, expe
-                            riences, styles, approaches and ideas.
+                            Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas. Show respect and value all individuals for their diverse backgrounds, expe riences, styles, approaches and ideas.
                         </p>
                         <div class="rate-name flex-space-between">
                             <h4>Joseph Nicholas</h4>
@@ -257,13 +241,14 @@
             <div class="container">
                 <h1 class="display-4" data-aos="fade-right" data-aos-delay="100">Partiners</h1>
                 <div class="row flex pt-3">
-                    <div class="partner"><a href="http://www.tanesco.co.tz" target="_blank"
-                            rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
+                    <div class="partner">
+                        <a href="http://www.tanesco.co.tz" target="_blank" rel="noopener noreferrer"><img src="assets/img/partner/partner1.png" alt="partner"></a>
                     </div>
-                    <div class="partner"><a href="http://www.ewura.go.tz" target="_blank" rel="noopener noreferrer"><img
-                                src="assets/img/partner/partner3.jpg" alt="partner"></a></div>
-                    <div class="partner"><a href="http://www.tanzania.go.tz" target="_blank"
-                            rel="noopener noreferrer"><img src="assets/img/partner/partner2.png" alt="partner"></a>
+                    <div class="partner">
+                        <a href="http://www.ewura.go.tz" target="_blank" rel="noopener noreferrer"><img src="assets/img/partner/partner3.jpg" alt="partner"></a>
+                    </div>
+                    <div class="partner">
+                        <a href="http://www.tanzania.go.tz" target="_blank" rel="noopener noreferrer"><img src="assets/img/partner/partner2.png" alt="partner"></a>
                     </div>
                 </div>
             </div>
@@ -297,10 +282,8 @@
                     <h3>Contact Us</h3>
                     <div class="address">
                         <p>
-                            <i class="fas fa-map-marker-alt"></i>
-                            Goba Njia Nne, Madale Road
-                            <br>
-                            P.O. Box 71480, Dar es Salaam, Tanzania
+                            <i class="fas fa-map-marker-alt"></i> Goba Njia Nne, Madale Road
+                            <br> P.O. Box 71480, Dar es Salaam, Tanzania
                         </p>
                     </div>
                     <div class="address">
@@ -311,8 +294,7 @@
                     <div class="address">
                         <p>
                             <i class="fas fa-phone-alt"></i> +255 785 398 434
-                            <br>
-                            +255 713 500 365
+                            <br> +255 713 500 365
                         </p>
                     </div>
                     <div class="address">
@@ -348,9 +330,7 @@
 
     <!-- ====== Scripts ====== -->
     <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <!-- AOS (Animation On Scroll JS) -->
