--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -47,6 +47,17 @@
                 <a href="#pages/contact.html" class="nav-link">Contact</a>
             </li>
         </ul>
+        <div class="social">
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
     </nav>
 
     <!-- === Hero === -->
