More changes on sections

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -49,7 +49,7 @@
         </ul>
         <div class="social">
             <a href="http://" target="_blank" rel="noopener noreferrer">
-                <i class="fab fa-facebook"></i>
+                <i class="fab fa-facebook-f"></i>
             </a>
             <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-instagram"></i>
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="hero-text">
-                    <span class="display-2">FastNet<br>Technology</span>
+                    <span class="display-3">FastNet<br>Technology</span>
                     <p>We serve, we resolve and we make it great...</p>
                     <a href="tel:+255748111800" class="btn btn-primary"> Call Us Now</a>
                 </div>
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="featured-img">
-                    <img src="assets/img/camera/camera5.png" alt="">
+                    <img src="assets/img/camera/camera8.jfif" alt="">
                 </div>
                 <div class="featured-text">
                     <h1>Watch man</h1>
