--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -140,6 +140,25 @@
         </div>
     </section>
 
+    <foote id="footer">
+        <div class="container">
+            <div class="row even-columns">
+                <div class="col">
+                    <img src="assets/img/brand/logo.png" alt="">
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
+                </div>
+            </div>
+        </div>
+    </foote>
+
 </body>
 
 </html>
