--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -143,8 +143,20 @@
     <foote id="footer">
         <div class="container">
             <div class="row even-columns">
-                <div class="col">
-                    <img src="assets/img/brand/logo.png" alt="">
+                <div class="col-brand">
+                    <span class="brand-text">FastNet Technology</span>
+                    <hr>
+                    <div class="social">
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.instagram.com/fastnet_technology/" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="col">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
