--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -91,10 +91,10 @@
         <div class="container">
             <div class="row">
                 <div class="featured-img">
-                    <img src="assets/img/camera/camera8.jfif" alt="">
+                    <img src="assets/img/camera/camera10.png" alt="">
                 </div>
                 <div class="featured-text">
-                    <h1>Watch man</h1>
+                    <h1>Watch Man</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
                         dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
@@ -140,12 +140,12 @@
         </div>
     </section>
 
-    <foote id="footer">
+    <footer id="footer">
         <div class="container">
             <div class="row even-columns">
                 <div class="col-brand">
                     <span class="brand-text">FastNet Technology</span>
-                    <hr>
+                    <hr class="hr-brand">
                     <div class="social">
                         <a href="http://" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook-f"></i>
@@ -159,18 +159,61 @@
                     </div>
                 </div>
                 <div class="col">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
+                    <h2>Quick Links</h2>
+                    <nav>
+                        <a href="#home">Home</a>
+                        <a href="pages/about.html">About</a>
+                        <a href="pages/services.html">Services</a>
+                        <a href="pages/projects.html">Projects</a>
+                        <a href="pages/contact.html">Contact</a>
+                    </nav>
                 </div>
                 <div class="col">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
-                </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos enim, debitis laudantium ipsa ratione impedit perspiciatis harum? Nesciunt possimus itaque ratione, mollitia, eum iste quasi doloribus numquam deserunt sint aut?</p>
+                    <h2>Reach Us</h2>
+                    <div class="contact-address">
+                        <div class="location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Dar es Salaam, TZ</span>
+                        </div>
+                        <div class="web">
+                            <i class="fas fa-globe"></i>
+                            <span>www.fastnet.co.tz</span>
+                        </div>
+                        <div class="email">
+                            <i class="fas fa-envelope"></i>
+                            <span>info@fastnet.co.tz</span>
+                        </div>
+                        <div class="phone">
+                            <i class="fas fa-phone-alt"></i>
+                            <span>+255 748 111 800</span>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="hr-copy">
+                <hr class="hr-bottom">
+                <p class="copyright">&copy; <span id="year"></span> Fastnet Technology, All Rights Reserved</p>
+            </div>
         </div>
-    </foote>
+        <!-- === Go-Top === -->
+        <div class="go_top">
+            <a href="#home">
+                <span class="fas fa-angle-up"></span>
+            </a>
+        </div>
+        <!-- End Go-Top -->
+    </footer>
 
+    <!-- ====== Scripts ====== -->
+    <!-- JQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <!-- jQuery Offline -->
+    <script src="assets/vendors/jquery/jquery.min.js"></script>
+    <!-- AOS (Animation On Scroll JS) -->
+    <!-- Main JS -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/index.js"></script>
+    <!-- End Scripts -->
 </body>
 
 </html>
