--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -94,11 +94,11 @@
                     <img src="assets/img/camera/camera10.png" alt="">
                 </div>
                 <div class="featured-text">
-                    <h1>Watch Man</h1>
+                    <h1>CCTV systems</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
-                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                        Engineered design, installation, maintenance and upgrade of CCTV systems (HD CCTV, AHD, TVI, IP CCTV). <br> Remote CCTV Live View and Playback.
                     </p>
+                    <a href="" class="btn btn-outline-white mt-1"> Read More</a>
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="container">
             <div class="row">
                 <div class="featured-2-text">
-                    <h1>Given control</h1>
+                    <h1>Access control</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
                         dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
@@ -130,7 +130,7 @@
                     <img src="assets/img/attendance/attendance3.png" alt="">
                 </div>
                 <div class="featured-3-text">
-                    <h1>Attend it</h1>
+                    <h1>Attend system</h1>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
                         dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
