More updates on featured sections

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -96,7 +96,7 @@
                 <div class="featured-text">
                     <h1>CCTV systems</h1>
                     <p>
-                        Engineered design, installation, maintenance and upgrade of CCTV systems (HD CCTV, AHD, TVI, IP CCTV). <br> Remote CCTV Live View and Playback.
+                        Well tailored and engineered design, installation, maintenance and upgrade of CCTV systems (HD CCTV, AHD, TVI, IP CCTV). <br> Remote CCTV Live View and Playback.
                     </p>
                     <a href="" class="btn btn-outline-white mt-1"> Read More</a>
                 </div>
@@ -111,9 +111,9 @@
                 <div class="featured-2-text">
                     <h1>Access control</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
-                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                        Top quality installation of Access control systems that use user authentication, authorization, and resource management to ensure that only authorized users can access specific resources.
                     </p>
+                    <a href="" class="btn btn-outline-primary mt-1"> Read More</a>
                 </div>
                 <div class="featured-2-img">
                     <img src="assets/img/access-control/access-control1.png" alt="">
@@ -132,9 +132,9 @@
                 <div class="featured-3-text">
                     <h1>Attend system</h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum, explicabo eligendi modi nisi tempore architecto temporibus aperiam minima iste cupiditate, maiores asperiores nihil consequuntur error illo hic fugit. Explicabo! Lorem, ipsum
-                        dolor sit amet consectetur adipisicing elit. Perferendis omnis cum cumque assumenda veniam repellat ducimus quam adipisci voluptatibus excepturi ex minus dolorem aliquid in quibusdam quas quisquam, reiciendis laborum?
+                        Easy tracking and monitoring of the attendance of employees, students, or any other group of individuals under top quality automated process of attendance tracking and reporting.
                     </p>
+                    <a href="" class="btn btn-primary mt-1"> Read More</a>
                 </div>
             </div>
         </div>
