--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -16,6 +16,7 @@
     <title>Fastnet</title>
     <!-- === CSS === -->
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/header_footer.css">
     <link rel="stylesheet" href="assets/css/utilities.css">
 </head>
 
@@ -135,6 +136,24 @@
                         Easy tracking and monitoring of the attendance of employees, students, or any other group of individuals under top quality automated process of attendance tracking and reporting.
                     </p>
                     <a href="" class="btn btn-primary mt-1"> Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- === Featured-4 === -->
+    <section id="featured-4">
+        <div class="container">
+            <div class="row">
+                <div class="featured-4-text">
+                    <h1>Car tracking</h1>
+                    <p>
+                        Argumented and automated car tracking system for the safety of a car with easy to use interface for monitoring your car trips and roots.
+                    </p>
+                    <a href="" class="btn btn-primary mt-1"> Read More</a>
+                </div>
+                <div class="featured-4-img">
+                    <img src="assets/img/car-tracking/car-tracking1.png" alt="">
                 </div>
             </div>
         </div>
