new updates on featured sections

--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -131,7 +131,7 @@
                     <img src="assets/img/attendance/attendance3.png" alt="">
                 </div>
                 <div class="featured-3-text">
-                    <h1>Attend system</h1>
+                    <h1>Attendance systems</h1>
                     <p>
                         Easy tracking and monitoring of the attendance of employees, students, or any other group of individuals under top quality automated process of attendance tracking and reporting.
                     </p>
@@ -148,7 +148,7 @@
                 <div class="featured-4-text">
                     <h1>Car tracking</h1>
                     <p>
-                        Argumented and automated car tracking system for the safety of a car with easy to use interface for monitoring your car trips and roots.
+                        Argumented and automated car tracking system for the security of a car with easy to use interface for monitoring your car trips and roots.
                     </p>
                     <a href="" class="btn btn-primary mt-1"> Read More</a>
                 </div>
