--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="assets/vendors/fontawesome-free-5.15.2-web/css/all.min.css">
     <!-- === Font Awesome Online === -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <!-- === Link Swiper's CSS === -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <!-- ===Title === -->
     <title>Fastnet</title>
-    <!-- === CSS === -->
+    <!-- === Local CSS === -->
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/header_footer.css">
     <link rel="stylesheet" href="assets/css/utilities.css">
@@ -159,6 +161,158 @@
         </div>
     </section>
 
+    <!-- === Testimonial === -->
+    <section id="swiper">
+        <h1 class="testimonial">Testimonial</h1>
+        <div class="containr">
+            <div class="swiper mySwiper container">
+                <div class="swiper-wrapper content">
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar1.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar2.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide card">
+                        <div class="card-content">
+                            <div class="card-image">
+                                <img src="assets/img/avatar/avatar.png" alt="" srcset="">
+                            </div>
+                            <div class="name-profession">
+                                <span class="name">Francis Lubida</span>
+                                <span class="profession">CEO & Founder, Fastnet</span>
+                            </div>
+                            <div class="review">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+
+
+
+
     <footer id="footer">
         <div class="container">
             <div class="row even-columns">
@@ -228,7 +382,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <!-- jQuery Offline -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
-    <!-- AOS (Animation On Scroll JS) -->
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/index.js"></script>
