--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -174,10 +174,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -189,10 +189,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -204,10 +204,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -219,10 +219,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -234,10 +234,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -249,10 +249,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -264,10 +264,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -279,10 +279,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
@@ -294,10 +294,10 @@
                             </div>
                             <div class="name-profession">
                                 <span class="name">Francis Lubida</span>
-                                <span class="profession">CEO & Founder, Fastnet</span>
+                                <span class="profession">CEO & Founder - Fastnet</span>
                             </div>
                             <div class="review">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
+                                <p><i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis iure inventore, exercitationem at tenetur dolorem incidunt debitis ullam.</p>
                             </div>
 
                         </div>
