--- a/fastnet/index.html
+++ b/fastnet/index.html
@@ -163,7 +163,7 @@
 
     <!-- === Testimonial === -->
     <section id="swiper">
-        <h1 class="testimonial">Testimonial</h1>
+        <h1 class="testimonial">Testimonials</h1>
         <div class="containr">
             <div class="swiper mySwiper container">
                 <div class="swiper-wrapper content">
